Update Cleaning data and training model.ipynb
filename

--- a/Cleaning data and training model.ipynb
+++ b/Cleaning data and training model.ipynb
@@ -276,7 +276,7 @@
    ],
    "source": [
     "# Charger le fichier CSV correspondant\n",
-    "filename = f'dataset.csv'\n",
+    "filename = f'data.csv'\n",
     "df = pd.read_csv(filename)\n",
     "target = 'Claim'\n",
     "df"
